--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ lifecycleRuntimeKtx = "2.8.6"
 
 retrofit = "2.9.0"
 converterName = "2.9.0"
+okhttpLogging = "4.10.0"
+okhttp = "5.0.0-alpha.3"
 
 
 [libraries]
@@ -34,6 +36,9 @@ androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecyc
 
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterName" }
+
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-log = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttpLogging" }
 
 room = { module = "androidx.room:room-runtime", version.ref = "room" }
 roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
